# database_gui_sqlite

./: CMakeLists.txt  Employee.sql  MainWindow.h  MainWindow.ui  README.md  company.db  mainwindow.cpp
